--- a/src/statsd.net/statsd.net/packages.config
+++ b/src/statsd.net/statsd.net/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
+  <package id="TopShelf" version="3.1.0" targetFramework="net45" />
 </packages>
