--- a/src/statsd.net/statsd.net/statsd.net.csproj
+++ b/src/statsd.net/statsd.net/statsd.net.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Topshelf">
+      <HintPath>..\packages\TopShelf.3.1.0\lib\net40-full\Topshelf.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collator.cs" />
@@ -57,6 +60,8 @@
     <Compile Include="Messages\Timing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatsdService.cs" />
+    <Compile Include="System\MessageParserBlockFactory.cs" />
     <Compile Include="System\TimedDataBlockFactory.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Writers\GraphiteWriter.cs" />
@@ -65,6 +70,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
