Added aggregators and percentile calculation

--- a/src/statsd.net/packages/repositories.config
+++ b/src/statsd.net/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\statsd.net\packages.config" />
+  <repository path="..\statsd.net-Tests\packages.config" />
 </repositories>
