Slight restructuring. Added counter, timer tests.
Aggregators now post each individual line, as opposed to a batch of
lines. I didn't want to introduce faux-batching when this can be handled
by the TPL, if necessary. Also added a few basic counter and timer
tests.

--- a/src/statsd.net/statsd.net-Tests/statsd.net-Tests.csproj
+++ b/src/statsd.net/statsd.net-Tests/statsd.net-Tests.csproj
@@ -58,12 +58,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="StatsdTestSuite.cs" />
     <Compile Include="CounterTests.cs" />
     <Compile Include="Infrastructure\InAppBackend.cs" />
     <Compile Include="Infrastructure\InAppListener.cs" />
     <Compile Include="Infrastructure\StatsBuilder.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Infrastructure\TestUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\statsd.net\statsd.net.csproj">
