--- a/src/statsd.net/CommandLineStatsClient/CommandLineStatsClient.csproj
+++ b/src/statsd.net/CommandLineStatsClient/CommandLineStatsClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89D3FEE2-CB2E-4D7F-AE5A-5BD7F6E5039A}</ProjectGuid>
+    <ProjectGuid>{08B2396F-7BEE-4048-A172-CFCC01B82FFF}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DemoDataFeeder</RootNamespace>
-    <AssemblyName>DemoDataFeeder</AssemblyName>
+    <RootNamespace>CommandLineStatsClient</RootNamespace>
+    <AssemblyName>statsdcmd</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
