--- a/src/statsd.net/packages/repositories.config
+++ b/src/statsd.net/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CommandLineStatsClient\packages.config" />
+  <repository path="..\DemoDataFeeder\packages.config" />
   <repository path="..\statsd.net\packages.config" />
   <repository path="..\statsd.net-Tests\packages.config" />
 </repositories>
