--- a/src/statsd.net/packages.config
+++ b/src/statsd.net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
   <package id="TopShelf" version="3.1.0" targetFramework="net45" />
 </packages>
