--- a/src/statsd.net/statsd.net.csproj
+++ b/src/statsd.net/statsd.net.csproj
@@ -37,7 +37,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.9.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Tpl.Dataflow.4.5.9\lib\net45\System.Threading.Tasks.Dataflow.dll</HintPath>
@@ -49,9 +51,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="Toml">
       <HintPath>..\lib\toml-net\Toml.dll</HintPath>
-    </Reference>
-    <Reference Include="Topshelf">
-      <HintPath>..\packages\TopShelf.3.1.0\lib\net40-full\Topshelf.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -72,14 +71,23 @@
     <Compile Include="Messages\Timing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceWrapper.cs" />
+    <Compile Include="ServiceWrapper.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Statsd.cs" />
     <Compile Include="System\AggregatorFactory.cs" />
+    <Compile Include="System\ConsoleLogger.cs" />
+    <Compile Include="System\EventLogLogger.cs" />
+    <Compile Include="System\ILogger.cs" />
     <Compile Include="System\LoggingBootstrap.cs" />
     <Compile Include="System\MessageParserBlockFactory.cs" />
     <Compile Include="System\Percentile.cs" />
+    <Compile Include="System\ProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="System\StatsdMessageRouterBlock.cs" />
     <Compile Include="Listeners\SystemEventListener.cs" />
+    <Compile Include="System\SuperCheapIOC.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
