Got service running and added SQL Server procs
Also added a few more options to DemoDataFeeder to send large volumes of
data to the server.

--- a/src/statsd.net/statsd.net.csproj
+++ b/src/statsd.net/statsd.net.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Messages\Timing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SystemMetricsService.cs" />
     <Compile Include="ServiceWrapper.cs">
       <SubType>Component</SubType>
     </Compile>
