--- a/statsd.net-Tests/packages.config
+++ b/statsd.net-Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
+  <package id="StatsdCsharpClient" version="1.0.0.0" targetFramework="net45" />
 </packages>
