--- a/statsd.net/statsd.net.csproj
+++ b/statsd.net/statsd.net.csproj
@@ -35,10 +35,6 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="StatsdClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\statsd-csharp-client\StatsdClient.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -62,6 +58,9 @@
     <Compile Include="Backends\GraphiteBackend.cs" />
     <Compile Include="Backends\IBackend.cs" />
     <Compile Include="Backends\SqlServerBackend.cs" />
+    <Compile Include="Framework\TimedLatencyPercentileAggregatorBlockFactory.cs" />
+    <Compile Include="Framework\TimedCounterAggregatorBlockFactory.cs" />
+    <Compile Include="Framework\TimedLatencyAggregatorBlockFactory.cs" />
     <Compile Include="Listeners\IListener.cs" />
     <Compile Include="Listeners\UdpStatsListener.cs" />
     <Compile Include="Messages\InvalidMessage.cs" />
@@ -75,24 +74,25 @@
     <Compile Include="Messages\Timing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IntervalService.cs" />
     <Compile Include="Services\SystemMetricsService.cs" />
     <Compile Include="ServiceWrapper.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Statsd.cs" />
-    <Compile Include="System\AggregatorFactory.cs" />
-    <Compile Include="System\ConsoleLogger.cs" />
-    <Compile Include="System\EventLogLogger.cs" />
-    <Compile Include="System\ILogger.cs" />
-    <Compile Include="System\LoggingBootstrap.cs" />
-    <Compile Include="System\MessageParserBlockFactory.cs" />
-    <Compile Include="System\Percentile.cs" />
-    <Compile Include="System\ProjectInstaller.cs">
+    <Compile Include="Framework\TimedGaugeAggregatorBlockFactory.cs" />
+    <Compile Include="Framework\ConsoleLogger.cs" />
+    <Compile Include="Framework\EventLogLogger.cs" />
+    <Compile Include="Framework\ILogger.cs" />
+    <Compile Include="Framework\LoggingBootstrap.cs" />
+    <Compile Include="Framework\MessageParserBlockFactory.cs" />
+    <Compile Include="Framework\Percentile.cs" />
+    <Compile Include="Framework\ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="System\StatsdMessageRouterBlock.cs" />
+    <Compile Include="Framework\StatsdMessageRouterBlock.cs" />
     <Compile Include="Listeners\SystemEventListener.cs" />
-    <Compile Include="System\SuperCheapIOC.cs" />
+    <Compile Include="Framework\SuperCheapIOC.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
