--- a/statsd.net-Tests/statsd.net-Tests.csproj
+++ b/statsd.net-Tests/statsd.net-Tests.csproj
@@ -41,7 +41,7 @@
     </Reference>
     <Reference Include="StatsdClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\statsd-csharp-client\StatsdClient.dll</HintPath>
+      <HintPath>..\packages\StatsdCsharpClient.1.0.0.0\lib\net45\StatsdClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.9.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -62,15 +62,20 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="GaugeTests.cs" />
+    <Compile Include="Infrastructure\ControllableIntervalService.cs" />
+    <Compile Include="Infrastructure\InAppListenerOutputChannel.cs" />
+    <Compile Include="Infrastructure\OutputBufferBlock.cs" />
+    <Compile Include="Infrastructure\GraphiteLineOutputBlock.cs" />
     <Compile Include="StatsdTestSuite.cs" />
-    <Compile Include="CounterTests.cs" />
     <Compile Include="Infrastructure\InAppBackend.cs" />
     <Compile Include="Infrastructure\InAppListener.cs" />
     <Compile Include="Infrastructure\TestUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemTests.cs" />
-    <Compile Include="TimerTests.cs" />
+    <Compile Include="TimedCounterAggregatorBlockTests.cs" />
+    <Compile Include="TimedGaugeAggregatorBlockTests.cs" />
+    <Compile Include="TimedLatencyAggregatorBlockTests.cs" />
+    <Compile Include="TimedLatencyPercentileAggregatorBlockTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\statsd.net\statsd.net.csproj">
