Added log4net. Closes #4. Added progressive back-off for SQL connections. Closes #7

--- a/statsd.net/statsd.toml
+++ b/statsd.net/statsd.toml
@@ -16,7 +16,7 @@ name = "foocollector"
 [backends]
   [backends.sqlserver]
   enabled = true
-  connectionString = "server=localhost;database=metrics;uid=metricsuser;password=metricsuser"
+  connectionString = "server=localhost;database=metrics;uid=mmetricsuser;password=metricsuser"
   
   [backends.graphite]
   enabled = true
