--- a/statsd.net/log4net.config
+++ b/statsd.net/log4net.config
@@ -3,7 +3,7 @@
   <root>
     <level value="ALL" />
     <appender-ref ref="OutputDebugStringAppender" />
-    <appender-ref ref="EventLogAppender" />
+    <appender-ref ref="RollingFileAppender" />
   </root>
 
   <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
@@ -12,34 +12,8 @@
     </layout>
   </appender>
 
-  <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
-    <threshold value="INFO" />
-    <logName value="Statsd.net"/>
-    <machineName value="."/>
-    <applicationName value="Statsd.net"/>
-    <mapping>
-      <level value="ERROR"/>
-      <eventLogEntryType value="Error"/>
-    </mapping>
-    <mapping>
-      <level value="WARN"/>
-      <eventLogEntryType value="Warning"/>
-    </mapping>
-    <mapping>
-      <level value="INFO"/>
-      <eventLogEntryType value="Information"/>
-    </mapping>
-    <mapping>
-      <level value="DEBUG"/>
-      <eventLogEntryType value="Information"/>
-    </mapping>
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="Source: %logger%newline%newlineMessage: %message%newline" />
-    </layout>
-  </appender>
-
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="c:\logs\stats-net.log"/>
+    <file value="stats-net.log"/>
     <staticLogFileName value="true" />
     <appendToFile value="true" />
     <rollingStyle value="Composite" />
