--- a/statsd.net/packages.config
+++ b/statsd.net/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
+  <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
 </packages>
