--- a/statsd.net/statsd.net.csproj
+++ b/statsd.net/statsd.net.csproj
@@ -35,6 +35,9 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.TransientFaultHandling.Core">
+      <HintPath>..\packages\TransientFaultHandling.Core.5.1.1209.1\lib\NET4\Microsoft.Practices.TransientFaultHandling.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -55,10 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backends\ConsoleBackend.cs" />
-    <None Include="Backends\Copy of SqlServerBackend.cs.off" />
     <Compile Include="Backends\GraphiteBackend.cs" />
     <Compile Include="Backends\IBackend.cs" />
-    <Compile Include="Backends\SqlServerBackend.cs" />
+    <Compile Include="Backends\SqlServer\SqlServerBackend.cs" />
+    <Compile Include="Backends\SqlServer\SqlServerErrorDetectionStrategy.cs" />
     <Compile Include="Framework\TimedSetAggregatorBlockFactory.cs" />
     <Compile Include="Framework\TimedLatencyPercentileAggregatorBlockFactory.cs" />
     <Compile Include="Framework\TimedCounterAggregatorBlockFactory.cs" />
@@ -83,8 +86,6 @@
     </Compile>
     <Compile Include="Statsd.cs" />
     <Compile Include="Framework\TimedGaugeAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\ConsoleLogger.cs" />
-    <Compile Include="Framework\ILogger.cs" />
     <Compile Include="Framework\LoggingBootstrap.cs" />
     <Compile Include="Framework\MessageParserBlockFactory.cs" />
     <Compile Include="Framework\Percentile.cs" />
