--- a/statsd.net/statsd.net.csproj
+++ b/statsd.net/statsd.net.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IntervalService.cs" />
+    <Compile Include="Services\SystemInfoService.cs" />
     <Compile Include="Services\SystemMetricsService.cs" />
     <Compile Include="ServiceWrapper.cs">
       <SubType>Component</SubType>
