Changed the IntervalService to allow broadcasts. Updated the basic aggregators to all use the same IntervalService instance.

--- a/statsd.net/statsd.toml
+++ b/statsd.net/statsd.toml
@@ -20,7 +20,7 @@ name = "foocollector"
   
   [backends.graphite]
   enabled = true
-  host = "localhost"
+  host = "metricsas1"
   port = 2003
 
   [backends.console]
