--- a/statsd-relay/statsd-relay.csproj
+++ b/statsd-relay/statsd-relay.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E2212771-D19D-4CA9-92ED-E254DA99FD84}</ProjectGuid>
+    <ProjectGuid>{C4E67EBA-0440-4EFB-835E-17CE6AFC3DBE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>statsd.net</RootNamespace>
-    <AssemblyName>statsd.net</AssemblyName>
+    <RootNamespace>statsd.relay</RootNamespace>
+    <AssemblyName>statsd-relay</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,14 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.TransientFaultHandling.Core">
-      <HintPath>..\packages\TransientFaultHandling.Core.5.1.1209.1\lib\NET4\Microsoft.Practices.TransientFaultHandling.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Sprache, Version=1.10.0.28, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Sprache">
       <HintPath>..\packages\Sprache.1.10.0.28\lib\net40\Sprache.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -63,50 +54,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Backends\ConsoleBackend.cs" />
-    <Compile Include="Backends\GraphiteBackend.cs" />
-    <Compile Include="Backends\SqlServer\SqlServerBackend.cs" />
-    <Compile Include="Backends\SqlServer\SqlServerErrorDetectionStrategy.cs" />
-    <Compile Include="Framework\TimedSetAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\TimedLatencyPercentileAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\TimedCounterAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\TimedLatencyAggregatorBlockFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relay.cs" />
     <Compile Include="ServiceWrapper.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Statsd.cs" />
-    <Compile Include="Framework\TimedGaugeAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\LoggingBootstrap.cs" />
-    <Compile Include="Framework\MessageParserBlockFactory.cs" />
-    <Compile Include="Framework\Percentile.cs" />
-    <Compile Include="Framework\ProjectInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Framework\StatsdMessageRouterBlock.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="log4net.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="App.config" />
+    <None Include="docs\configuration.md" />
     <None Include="packages.config" />
-    <None Include="statsd.toml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\statsd.net.shared\statsd.net.shared.csproj">
-      <Project>{be150548-d5eb-4289-8706-3ea475175592}</Project>
-      <Name>statsd.net.shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Console\" />
+    <None Include="README.md" />
+    <None Include="statsd-relay.toml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>copy /Y "$(ProjectDir)statsd.toml" "$(TargetDir)"</PreBuildEvent>
-  </PropertyGroup>
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
