Tweaked logging config, adding release transformation (via SlowCheetah) and a trace appender for dev.

--- a/statsd.net/log4net.config
+++ b/statsd.net/log4net.config
@@ -3,15 +3,23 @@
   <root>
     <level value="ALL" />
     <appender-ref ref="OutputDebugStringAppender" />
+    <appender-ref ref="DebugTraceAppender" />
     <appender-ref ref="RollingFileAppender" />
+    <appender-ref ref="EventLogAppender" />
   </root>
 
   <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %-5level %logger - %message$newline"/>
+      <conversionPattern value="[statsd.net] %-5level - %message%newline"/>
     </layout>
   </appender>
 
+  <appender name="DebugTraceAppender" type="log4net.Appender.TraceAppender">
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="[statsd.net] %-5level - %message%newline"/>
+    </layout>
+  </appender>
+  
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <file value="stats-net.log"/>
     <staticLogFileName value="true" />
@@ -19,9 +27,16 @@
     <rollingStyle value="Composite" />
     <maxSizeRollBackups value="10" />
     <maximumFileSize value="1MB" />
-    <datePattern value="'.'yyyyMMdd'.log'" />
+    <datePattern value="yyyyMMdd" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%19date{yyyy-MM-dd HH:mm:ss} %-5level %logger{1} - %message%newline" />
+      <conversionPattern value="%19date{yyyy-MM-dd HH:mm:ss} %-5level - %message%newline" />
+    </layout>
+  </appender>
+
+  <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
+    <applicationName value="statsd.net" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %-5level - %message%newline" />
     </layout>
   </appender>
 </log4net>
