--- a/statsd.net/packages.config
+++ b/statsd.net/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
+  <package id="SlowCheetah" version="2.5.5" targetFramework="net45" />
   <package id="Sprache" version="1.10.0.28" targetFramework="net45" />
   <package id="toml-net" version="0.1.0.16876" targetFramework="net45" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
