Combined all assemblies into statsdnet.exe. Moved parser block to shared library.

--- a/statsd-relay/statsd-relay.toml
+++ b/statsd-relay/statsd-relay.toml
@@ -10,7 +10,7 @@ name = "statsd-relay"
   port = 8000
 
   [listeners.tcp]
-  enabled = true
+  enabled = false
   port = 8001
 
   [listeners.http]
