--- a/statsd.net/packages.config
+++ b/statsd.net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ilmerge" version="2.13.0307" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
   <package id="SlowCheetah" version="2.5.5" targetFramework="net45" />
