--- a/statsd.net/statsd.net.csproj
+++ b/statsd.net/statsd.net.csproj
@@ -79,7 +79,6 @@
     <Compile Include="Statsd.cs" />
     <Compile Include="Framework\TimedGaugeAggregatorBlockFactory.cs" />
     <Compile Include="Framework\LoggingBootstrap.cs" />
-    <Compile Include="Framework\MessageParserBlockFactory.cs" />
     <Compile Include="Framework\Percentile.cs" />
     <Compile Include="Framework\ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -132,4 +131,22 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <UsingTask TaskName="ILMerge.MSBuild.Tasks.ILMerge" AssemblyFile="$(SolutionDir)\packages\ILMerge.MSBuild.Tasks.1.0.0.3\tools\ILMerge.MSBuild.Tasks.dll" />
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <MergeAsm Include="$(OutputPath)$(TargetFileName)" />
+      <MergeAsm Include="$(OutputPath)log4net.dll" />
+      <MergeAsm Include="$(OutputPath)Sprache.dll" />
+      <MergeAsm Include="$(OutputPath)Microsoft.Practices.TransientFaultHandling.Core.dll" />
+      <MergeAsm Include="$(OutputPath)statsd.net.shared.dll" />
+      <MergeAsm Include="$(OutputPath)StatsdClient.dll" />
+      <MergeAsm Include="$(OutputPath)System.Threading.Tasks.Dataflow.dll" />
+      <MergeAsm Include="$(OutputPath)toml-net.dll" />
+    </ItemGroup>
+    <PropertyGroup>
+      <MergedAssembly>$(ProjectDir)$(OutDir)statsdnet.exe</MergedAssembly>
+    </PropertyGroup>
+    <Message Text="ILMerge @(MergeAsm) -&gt; $(MergedAssembly)" Importance="high" />
+    <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="$(MergedAssembly)" TargetKind="SameAsPrimaryAssembly" />
+  </Target>
 </Project>
