--- a/statsd.net-Tests/packages.config
+++ b/statsd.net-Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="StatsdCsharpClient" version="1.0.0.0" targetFramework="net45" />
