--- a/statsd.net/statsd.toml
+++ b/statsd.net/statsd.toml
@@ -17,6 +17,7 @@ name = "statsd"
   [backends.sqlserver]
   enabled = false
   connectionString = "server=localhost;database=metrics;uid=mmetricsuser;password=metricsuser"
+  writeBatchSize = 500
   
   [backends.graphite]
   enabled = true
